stop using Path of